# dify-client

./: .gitignore  DEVELOPMENT.md  PROJECT_OVERVIEW.md  README.md  build.bat  build.sh  env.d.ts  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/router/: index.ts
src/services/: difyApi.ts
src/stores/: dify.ts
src/views/: Home.vue  Settings.vue  WorkflowRun.vue
